<resources>
    <string name="app_name">PriorityTask5</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pain_name">up to work</string>
    <string name="task">task name</string>
    <string name="task_type">Pattern desigen</string>
    <string name="estmeted_time">est time</string>
    <string name="start_time">calculator time</string>
    <string name="show_time">00:00:00</string>
    <string name="start_button">start</string>
    <string-array name="show_date">
        <item></item>
        <item>Hours</item>
        <item>Day</item>
        <item>Month</item>
    </string-array>

    <string-array name="numbers_of_time">
        <item></item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
