<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center|top"
        android:layout_height="match_parent">

        <TextView
            android:layout_margin="15dp"
            android:id="@+id/pain_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/pain_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/line1"
            android:background="@color/WhiteSmoke"
            android:layout_below="@id/pain_name"
            android:layout_width="match_parent"
            android:layout_height="3dp"/>

       <TextView
           android:layout_marginLeft="10dp"
           android:layout_margin="15dp"
           android:textAlignment="center"
           android:textSize="20sp"
           android:text="@string/task"
           android:id="@+id/task_name"
           android:layout_below="@id/line1"
           android:layout_alignParentLeft="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

        <TextView
android:textSize="20sp"
            android:layout_margin="15dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/line1"
            android:id="@+id/task_type"
            android:layout_toRightOf="@id/task_name"
            android:text="@string/task_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/est_time"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/task_name"
            android:layout_margin="15dp"
            android:text="@string/estmeted_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginLeft="20dp"
            android:layout_below="@id/task_name"
            android:layout_toRightOf="@id/est_time"
            android:layout_margin="15dp"
            android:id="@+id/sp_numbers"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:entries="@array/numbers_of_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <Spinner
            android:layout_marginLeft="30dp"
            android:layout_below="@id/task_name"
            android:layout_toRightOf="@id/sp_numbers"
            android:layout_margin="15dp"
            android:id="@+id/sp_date"
            android:entries="@array/show_date"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            android:layout_below="@id/est_time"
            android:layout_marginLeft="10dp"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:id="@+id/cal_time"
            android:text="@string/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textAlignment="center"
            android:text="@string/show_time"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:layout_below="@id/est_time"
            android:layout_toRightOf="@id/cal_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</android.support.v7.widget.CardView>